[package]
name = "relay-subscribe-publish-race-condition"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
relay_rpc = { git = "https://github.com/WalletConnect/WalletConnectRust.git", tag = "v0.23.3", features = ["cacao"] }
relay_client = { git = "https://github.com/WalletConnect/WalletConnectRust.git", tag = "v0.23.3" }
tokio = { version = "1", features = ["full"] }
url = "2.3.1"
serde_json = "1.0.91"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "parking_lot",
] }
derive_more = "0.99.17"
tungstenite = { version = "0.20", features = ["native-tls"] }
